# pty-claude

./: .gitignore  Cargo.toml  README.md  RUST_MIGRATION_PLAN.md  dev.sh  package-lock.json
doc/: architecture.md  manual-test-instructions.md  setup-guide.md  web-terminal.html
src/: lib.rs  main.rs
src/auth/: authorizer.rs  default_authorizer.rs  default_pairing_service.rs  mod.rs  pairing.rs
src/cli/: mod.rs
src/net/: auth.rs  json.rs  mod.rs  routes.rs  server.rs  state.rs  websocket.rs
src/service/: evidence.rs  log_buffer.rs  mod.rs  observation_store.rs  session_manager.rs  types.rs
src/session/: conpty.rs  env.rs  env_file_parser.rs  env_resolver.rs  launch.rs  lifecycle.rs  mod.rs  output_buffer.rs  posix_pty.rs  record.rs  registry.rs  runtime.rs  snapshot.rs  terminal.rs  types.rs
src/store/: file_store.rs  host_config.rs  mod.rs  pairing_store.rs  session_store.rs
src/util/: debug.rs  mod.rs
terminal/: index.html  manifest.json  service-worker.js  style.css  terminal.js
